added extra test scenarios