@@ -1,8 +1,8 @@
 package nl.novi.nobbie.controller;
 
 import nl.novi.nobbie.NobbieFinalApplication;
+import nl.novi.nobbie.dto.BabyNameDto;
 import nl.novi.nobbie.dto.UserProfileDto;
-import nl.novi.nobbie.model.BabyName;
 import nl.novi.nobbie.model.Gender;
 import nl.novi.nobbie.model.Role;
 import nl.novi.nobbie.model.UserProfile;
@@ -17,10 +17,10 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
 import javax.sql.DataSource;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.BDDMockito.given;
@@ -28,6 +28,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 
 
 @WebMvcTest
@@ -55,7 +56,7 @@ class UserProfileControllerTest {
 
     //insert testdata
     UserProfileDto user = new UserProfileDto(321L, "test01", "first", "last", "email@grs.nl", "1234567", Role.USER, 1);
-    List<UserProfileDto> users = Arrays.asList(user);
+    List<UserProfileDto> users = List.of(user);
     UserProfile u = new UserProfile(user.getUsername(), user.getFirstname(), user.getLastname(), user.getEmailaddress(), user.getPassword(), user.getUserId(), user.getRole(), user.getEnabled());
 
     @Test
@@ -127,12 +128,104 @@ class UserProfileControllerTest {
     public void saveBabyNameForUser() throws Exception {
 
        Mockito.when(service.getUser(321L)).thenReturn(user);
-        Mockito.when(service.saveBabyName(321L, 1L)).thenReturn(true);
+       Mockito.when(service.saveBabyName(321L, 1L)).thenReturn(true);
 
        //execute test
-        mockMvc.perform(post("/users/321/babynames")
+        mockMvc.perform(post("/users/321/babyNames")
                         .param("babyNameId", "1"))
                 .andDo(print())
                 .andExpect(status().isOk());
+    }
+
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void returnListOfSavedBabyNamesForUserWithMatch() throws Exception {
+
+        BabyNameDto name = new BabyNameDto(1L, "Saskia", Gender.F, 1);
+        List<BabyNameDto> names = List.of(name);
+
+        Mockito.when(service.getUser(321L)).thenReturn(user);
+        Mockito.when(service.getSavedNames(321L, true)).thenReturn(names);
+
+        //execute test
+        mockMvc.perform(get("/users/321/babyNames")
+                        .param("match", "true"))
+                .andDo(print())
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void returnListOfSavedBabyNamesForUserWithoutMatch() throws Exception {
+
+        BabyNameDto name = new BabyNameDto(1L, "Saskia", Gender.F, 1);
+        List<BabyNameDto> names = List.of(name);
+
+        Mockito.when(service.getUser(321L)).thenReturn(user);
+        Mockito.when(service.getSavedNames(321L, false)).thenReturn(names);
+
+        //execute test
+        mockMvc.perform(get("/users/321/babyNames")
+                        .param("match", "false"))
+                .andDo(print())
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void deleteUserByIdFails() throws Exception {
+
+        //mock triggering an exception
+        Mockito.doThrow(Exception.class).when(service).deleteById(1000L);
+
+        //execute test
+        mockMvc.perform(MockMvcRequestBuilders.delete("/deleteUser")
+                        .param("id", "1000"))
+                .andDo(print())
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void deleteUserById() throws Exception {
+        //execute test
+        mockMvc.perform(MockMvcRequestBuilders.delete("/deleteUser")
+                        .param("id", "1000"))
+                .andDo(print())
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void resetPasswordForUser() throws Exception {
+
+        //mock triggering an exception
+        Mockito.when(service.resetPasswordById(321L)).thenReturn(user);
+
+        //execute test
+        mockMvc.perform(MockMvcRequestBuilders.patch("/resetPassword")
+                        .param("id", "321"))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(MockMvcResultMatchers.jsonPath("password").isNotEmpty());
+    }
+
+    @Test
+    @WithMockUser(username="admin",authorities={"0"})
+    void setConnectionForUser() throws Exception {
+        //mock triggering an exception
+        Mockito.when(service.setConnection(321L, 1L)).thenReturn(user);
+        Mockito.when(service.setConnection(1L, 321L)).thenReturn(user);
+
+
+        //execute test
+        mockMvc.perform(MockMvcRequestBuilders.patch("/connection")
+                        .param("id", "321")
+                        .param("connection", "1"))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(content().string("321 en 1 zijn nu gekoppeld"));
+
     }
 }
